vm/assets/kuard.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kuard
  namespace: default
spec:
  replicas: 1 # Paramètre le deployment, lui indique combien de pod doit-il générer, 1 par défaux
  selector: # Paramètre le deployment, lui indique quel pod il doit manager
    matchLabels:
      app: kuard
  template: # Le fichier de config du pod -> [Pods | Kubernetes](https://kubernetes.io/docs/concepts/workloads/pods/#pod-templates)
    metadata:
      labels:
        app: kuard
    spec:
      containers:
        - name: kuard
          image: gcr.io/kuar-demo/kuard-amd64:blue
