vm/assets/kuard_pods.yaml
apiVersion: v1
kind: Pod
metadata:
  name: kuard-pods
spec:
  containers:
    - name: kuard
      image: gcr.io/kuar-demo/kuard-amd64:blue
