vm/assets/kuard_svc.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: kuard
spec:
  type: ClusterIP
  ports:
    - port: 9080
      protocol: TCP
      targetPort: web
  selector:
    app: kuard

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kuard-svc
  namespace: default
spec:
  replicas: 1 # Paramètre le deployment, lui indique combien de pod doit-il générer, 1 par défaux
  selector: # Paramètre le deployment, lui indique quel pod il doit manager
    matchLabels:
      app: kuard-svc
  template: # Le fichier de config du pod -> [Pods | Kubernetes](https://kubernetes.io/docs/concepts/workloads/pods/#pod-templates)
    metadata:
      labels:
        app: kuard-svc
    spec:
      containers:
        - name: kuard
          image: gcr.io/kuar-demo/kuard-amd64:blue
          ports:
            - containerPort: 8080
              protocol: TCP
              name: web
