vm/assets/kuard_ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: kuard
  namespace: default
spec:
  entryPoints:
    - websecure
    - web
  routes:
    - kind: Rule
      match: Host(`kuard.kubemaster.local`)
      services:
        - name: kuard
          port: 9080
